--- a/PullUpView/Base.lproj/Main.storyboard
+++ b/PullUpView/Base.lproj/Main.storyboard
@@ -18,17 +18,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4_earth" translatesAutoresizingMaskIntoConstraints="NO" id="hLX-T6-iIj">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Doordash" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kXE-7B-mll">
+                                <rect key="frame" x="16" y="36" width="142" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="hLX-T6-iIj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5eA-go-LjW"/>
-                            <constraint firstItem="hLX-T6-iIj" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6wU-tJ-PAV"/>
-                            <constraint firstItem="hLX-T6-iIj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="MwG-37-brs"/>
-                            <constraint firstItem="hLX-T6-iIj" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ewb-n9-bIA"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -37,7 +35,4 @@
             <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="4_earth" width="1024" height="1024"/>
-    </resources>
 </document>
